# FewChallenger

./: CMakeLists.txt  README.md
Challenger/: CMakeLists.txt
Challenger/Challenger/: Amplitude.h  Challenger.h  Interpolant.h  Spline.h
Challenger/src/lib/: Challenger.cpp  Interpolant.cpp
Challenger/src/program/: Challenge.cpp
Challenger/tests/src/: Amplitude_test.cpp  Interpolant_test.cpp  Spline_test.cpp
Few/: CMakeLists.txt
Few/Few/: Amplitude.h  Interpolant.h
Few/src/lib/: Amplitude.cpp  Interpolant.cpp
Few/tests/src/: Amplitude_test.cpp  Interpolant_test.cpp
MemoryChallenger/: CMakeLists.txt
MemoryChallenger/MemoryChallenger/: Amplitude.h  Interpolant.h
MemoryChallenger/src/lib/: Amplitude.cpp
MemoryChallenger/tests/src/: Amplitude_test.cpp  Interpolant_test.cpp
SplineChallenger/: CMakeLists.txt
SplineChallenger/SplineChallenger/: Amplitude.h  Interpolant.h  Spline.h
SplineChallenger/src/lib/: Amplitude.cpp  Interpolant.cpp
SplineChallenger/tests/src/: Amplitude_test.cpp  Interpolant_test.cpp  Spline_test.cpp
doc/: mainpage.dox
